Fix some grid/alignment issues in header and search
This resolves some long-standing Bootstrap grid misuse in the header and search bar:

1. Search query bar and results container had a row without
   accompanying columns (should just be a container sans row). The
   query bar CSS had manually implemented (and incomplete for mobile)
   margins to compensate, which are now removed.

2. The header logo was absolutely positioned, resulting in it appearing
   outside its surrounding column/container (too far left). This commit
   removes that, allowing it to be positioned on the left edge of its
   container where it will align with other containers on the page,
   such as the search query bar and results container.

3. The search results item wrapper had negative margins to allow space
   around the hover/highlight background color, however this resulted
   in horizontal scrolling on narrow screens because it was larger than
   the gutter width. Note: there is still some horizontal scrolling
   present on narrow screens being caused by something in the footer.

--- a/jekyll/_sass/_instantsearch.scss
+++ b/jekyll/_sass/_instantsearch.scss
@@ -18,12 +18,6 @@
     position: relative;
     display: block;
     max-width: 400px;
-    margin-left: 18px;
-    margin-right: 18px;
-
-    @media screen and (min-width: $screen-md) {
-      margin: 0;
-    }
 
     .ais-SearchBox-submit {
       position: absolute;
@@ -81,11 +75,12 @@
 }
 
 .result-item-wrap {
-  $result-spacing: $spacing-medium-vertical / 2;
+  $result-vertical-spacing: $spacing-medium-vertical / 4;
+  $half-gutter-width: $grid-gutter-width / 2;
 
-  padding: $result-spacing/2 $result-spacing;
-  margin-left:  -$result-spacing;
-  margin-right: -$result-spacing;
+  padding: $result-vertical-spacing $half-gutter-width;
+  margin-left:  -$half-gutter-width;
+  margin-right: -$half-gutter-width;
 
   .result-title {
     font-size: 18px;
