--- a/jekyll/_sass/_variables.scss
+++ b/jekyll/_sass/_variables.scss
@@ -14,6 +14,9 @@ $gray-100: #F7F7F7;
 $gray-200: #e2e0e0;
 $gray-dark: #898989;
 
+// Grid System
+$grid-gutter-width: 30px;
+
 // Screen Sizes
 $screen-xs:                  480px;
 $screen-xs-min:              $screen-xs;
